# backend-yandex-practice

./: .gitignore  CMakeLists.txt  README.md  web_exporter.py
.github/workflows/: gitflow.yaml
sprint1/problems/async_server/solution/src/: http_server.h  main.cpp
sprint1/problems/cafeteria/solution/: CMakeLists.txt
sprint1/problems/cafeteria/solution/src/: cafeteria.h  gascooker.h  hotdog.h  ingredients.h  main.cpp  order.h
sprint1/problems/final_task/solution/src/: api.cpp  api.h  error_codes.h  http_server.cpp  http_server.h  json_loader.cpp  main.cpp  model.cpp  model.h  request_handler.cpp  request_handler.h
sprint1/problems/map_json/solution/: CMakeLists.txt  Dockerfile
sprint1/problems/map_json/solution/src/: api.cpp  json_loader.h  main.cpp  model.h  request_handler.h
sprint1/problems/radio/solution/: CMakeLists.txt
sprint1/problems/radio/solution/src/: client-server.h  main.cpp
sprint1/problems/restaurant_multi_threaded/solution/src/: main.cpp
sprint1/problems/sync_server/solution/: CMakeLists.txt
sprint2/examples/boost_log/: main.cpp
sprint2/problems/command_line/solution/: CMakeLists.txt  Dockerfile  gmon.out
sprint2/problems/game_state/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/join_game/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/logger/solution/: my_logger.cpp  my_logger.h
sprint2/problems/move_players/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/move_players/solution/src/: api.h  api_proxy.cpp  api_proxy.h  api_v1.cpp  api_v1.h  error_codes.cpp  error_codes.h  json_loader.cpp  main.cpp  model.cpp  model.h  players.h  request_handler.cpp  request_redirection.cpp  tagged.cpp
sprint2/problems/server_logging/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/static_content/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/time_control/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/ammo/solution/: load.yaml
sprint3/problems/flamegraph/precode/: shoot.py
sprint3/problems/flamegraph/solution/: shoot.py
sprint3/problems/gather-tests/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/gather/solution/: CMakeLists.txt
sprint3/problems/gen_objects/solution/: CMakeLists.txt
sprint3/problems/gen_objects/solution/src/: geometry.cpp  main.cpp  time.h
sprint3/problems/gen_objects/solution/tests/: loot_spawner_tests.cpp
sprint3/problems/load/solution/: load.yaml
sprint3/problems/scores/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/scores/solution/src/: api_v1.cpp  auto_data_saver.cpp  auto_data_saver.hpp  logger.cpp  main.cpp  model.cpp  model.h  players.h
sprint3/problems/stress/solution/: load.yaml
sprint3/problems/tv/solution/src/: tv.h  (+1 more)
sprint4/problems/bookypedia-1/solution/: CMakeLists.txt
sprint4/problems/bookypedia-2/solution/: CMakeLists.txt
sprint4/problems/db_of_books/solution/: CMakeLists.txt  main.cpp
sprint4/problems/leave_game/solution/: CMakeLists.txt  Dockerfile
sprint4/problems/state_serialization/solution/: Dockerfile
src/: api_proxy.cpp  auto_data_saver.cpp  collision_detector.h  domain_db.h  error_codes.h  geometry.h  json_loader.cpp  json_loader.h  logger.cpp  method_handler.cpp  request_handler.cpp  request_handler.h  request_redirection.cpp  time.cpp
(+190 files in other folders)
